# SalesTracker

./: .env  .gitignore  Dockerfile  Dockerfile.enhanced  IMPROVEMENTS_SUMMARY.md  NEXT_STEPS.md  Node.py  Procfile  README.md  README_ENHANCED.md  README_IMPROVED.md  SECURITY_SCANNING.md  SETUP_GUIDE.md  app.py  cli.py  cli_enhanced.py  config.py  config_enhanced.py  find_products.py  install.sh  main.py  main_enhanced.py  main_improved.py  manifest.json  package-lock.json  pyproject.toml  recipients.json  recipients_store.py  render.yaml  requirements.txt  sale-tracker.service  send_email.py  setup.cfg  setup.py  setup_improved.py  start_web.sh  subscriptions_store.py  test_enhanced_framework.py  test_sale_tracker.py  test_web_app.py  (+2 more)
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  daily-email.yml  enhanced-ci-cd.yml
SaleTracker/: .env  Node.py  Procfile  Test.py  app.py  requirements.txt  send_email.sh
SaleTracker/ backend/: get_product_details.py  main.py
SaleTracker/ backend/templates/: website.html
SaleTracker/static/: scripts.js  styles.css
SaleTracker/templates/: index.html
deprecated/static/: style.css
deprecated/templates/: index.html
retailers/: __init__.py  base.py  lululemon.py  nike.py  registry.py
static/: scripts.js  styles.css
templates/: dashboard.html  enhanced_dashboard.html  index.html
